fix: Ajustando nome das variáveis e configurações de auth e cors