@@ -2,6 +2,7 @@ package com.solarize.solarizeWebBackend.shared.security;
 
 import com.solarize.solarizeWebBackend.modules.auth.AuthService;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
@@ -94,9 +95,9 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
-        CorsConfiguration configuracao =  new CorsConfiguration();
-        configuracao.applyPermitDefaultValues();
-        configuracao.setAllowedMethods(
+        CorsConfiguration config =  new CorsConfiguration();
+        config.setAllowedOriginPatterns(Arrays.asList("*"));
+        config.setAllowedMethods(
                 Arrays.asList(
                         HttpMethod.GET.name(),
                         HttpMethod.POST.name(),
@@ -106,12 +107,14 @@ public class SecurityConfig {
                 )
         );
 
-        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "x-auth-token"));
+        config.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
+        config.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
-        origem.registerCorsConfiguration("/**", configuracao);
+        UrlBasedCorsConfigurationSource origin = new UrlBasedCorsConfigurationSource();
+        origin.registerCorsConfiguration("/**", config);
 
-        return origem;
+        return origin;
 
     }
 }
